[package]
name = "wavehub"
version = "0.1.0"
edition = "2021"
description = "WaveHub administrative smart contract — manages reward Wave cycles on Stellar Soroban."
license = "MIT"
repository = "https://github.com/your-org/WaveHub-The-Orchestrator"
keywords = ["stellar", "soroban", "smart-contract", "wavehub"]
categories = ["cryptography::cryptocurrencies"]

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
